--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,13 @@
 server:
   port: 9094
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-
 spring:
+  profiles:
+    active: local
   application:
     name: ORDER-SERVICE
   data:
     mongodb:
-      uri:  mongodb+srv://<username>:<password>@pari.cdg1pqe.mongodb.net/
-      host: localhost
-      port: 27017
       database: orderdb
       repositories:
         enabled: true
